--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
 alembic==1.14.1
+APScheduler==3.11.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 greenlet==3.1.1
+idna==3.10
 Mako==1.3.9
 MarkupSafe==3.0.2
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
+requests==2.32.3
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
+tzdata==2025.1
+tzlocal==5.3
+urllib3==2.3.0
