--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,19 @@ greenlet==3.1.1
 idna==3.10
 Mako==1.3.9
 MarkupSafe==3.0.2
+numpy==2.2.3
+packaging==24.2
+pandas==2.2.3
+patsy==1.0.1
 psycopg2-binary==2.9.10
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.1
 requests==2.32.3
+scipy==1.15.2
+six==1.17.0
 SQLAlchemy==2.0.38
+statsmodels==0.14.4
 typing_extensions==4.12.2
 tzdata==2025.1
 tzlocal==5.3
