--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 alembic==1.14.1
 APScheduler==3.11.0
+blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+Flask==3.1.0
 greenlet==3.1.1
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
 Mako==1.3.9
 MarkupSafe==3.0.2
 numpy==2.2.3
@@ -23,3 +29,4 @@ typing_extensions==4.12.2
 tzdata==2025.1
 tzlocal==5.3
 urllib3==2.3.0
+Werkzeug==3.1.3
